Se añaden cosas

--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
 </head>
 <body>
     <header>
-        <h1>Tu Nombre</h1>
+        <h1>Sergio Melero Royo</h1>
         <p>Desarrollador de Software</p>
     </header>
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
-        <p>Descripción breve sobre ti.</p>
+        <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>
+        <br>
+		<h2>¿Qué estoy haciendo ahora?</h2>
+		<section class="container">
+			<div class="column">
+				<h2>Título 1</h2>
+				<img src="gif1.gif" alt="GIF 1">
+			</div>
+			<div class="column">
+				<h2>Título 2</h2>
+				<img src="gif2.gif" alt="GIF 2">
+			</div>
+			<div class="column">
+				<h2>Título 3</h2>
+				<img src="gif3.gif" alt="GIF 3">
+			</div>
+</section>
     </section>
     <section id="proyectos">
         <h2>Proyectos</h2>
@@ -31,8 +47,17 @@
     </section>
     <!-- Agrega más secciones según sea necesario -->
     <footer>
-        <p>Contacto: tuemail@example.com</p>
-    </footer>
+		<div class="social-links">
+			<a href="https://www.linkedin.com/in/sergiomeleroroyo/" target="_blank">
+				<img src="images/LinkedIn-Blue.png" alt="LinkedIn">
+			</a>
+			<a href="https://github.com/sergiomele97" target="_blank">
+				<img src="images/GitHub_Logo_White.png" alt="GitHub">
+			</a>
+			<a>Contacto: sergiomele97@gmail.com</a>
+		</div>
+		
+	</footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
