--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
 		<h2>¿Qué estoy haciendo ahora?</h2>
 		<section class="container">
 			<div class="column">
-				<h2>Título 1</h2>
-				<img src="gif1.gif" alt="GIF 1">
+				<h3>Pokemon silver online</h3>
+				<div class="gif-container">
+					<img src="images/gifs/Pokemon_silver_online.gif" alt="Pokemon silver">
+				</div>
 			</div>
 			<div class="column">
-				<h2>Título 2</h2>
-				<img src="gif2.gif" alt="GIF 2">
+				<h3>El tetris</h3>
+				<img src="images/gifs/Tetris.gif" alt="Tetris">
 			</div>
 			<div class="column">
-				<h2>Título 3</h2>
-				<img src="gif3.gif" alt="GIF 3">
+				<h3>Buscar un primer trabajo de programador en 2024</h3>
+				<img src="images/gifs/This_is_fine.gif" alt="This is fine">
 			</div>
 </section>
     </section>
