--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 				<h3>Buscar un primer trabajo de programador en 2024</h3>
 				<img src="images/gifs/This_is_fine.gif" alt="This is fine">
 			</div>
-</section>
+		</section>
+		<h2>Tecnologias</h2>
+		<section class="container">
+			
+		</section>
     </section>
     <section id="proyectos">
         <h2>Proyectos</h2>
