se añade tabla tecnologias

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
     <header>
         <h1>Sergio Melero Royo</h1>
         <p>Desarrollador de Software</p>
     </header> 
+	
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
-        <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>
-        <br>
+        <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>	
+	</section>
+	
+	
+	<section>
 		<h2>¿Qué estoy haciendo ahora?</h2>
-		<section class="container">
+		<div class="container">
 			<div class="column">
 				<h3>Pokemon silver online</h3>
 				<div class="gif-container">
@@ -31,24 +36,78 @@
 				<h3>Buscar un primer trabajo de programador en 2024</h3>
 				<img src="images/gifs/This_is_fine.gif" alt="This is fine">
 			</div>
-		</section>
-		<h2>Tecnologias</h2>
-		<section class="container">
-			
-		</section>
-    </section>
-    <section id="proyectos">
-        <h2>Proyectos</h2>
-        <div class="proyecto">
-            <h3>Nombre del Proyecto 1</h3>
-            <img src="images/gifs/proyecto1.gif" alt="Proyecto 1">
-            <p class="descripcion">Descripción del proyecto 1.</p>
-        </div>
-        <div class="proyecto">
-            <h3>Nombre del Proyecto 2</h3>
-            <img src="images/gifs/proyecto2.gif" alt="Proyecto 2">
-            <p class="descripcion">Descripción del proyecto 2.</p>
-        </div>
+		</div>
+	</section>
+	
+	<section>
+		<h2>Tecnologias</h2>	
+
+		<table>
+		  <tr>
+			<th>Lenguajes de Programación</th>
+			<td>Python</td>
+			<td>Java</td>
+			<td>C#</td>
+			<td>C++</td>
+			<td>Perl</td>
+			<td>JavaScript</td>
+		  </tr>
+		  <tr>
+			<th>Frameworks</th>
+			<td>WPF</td>
+			<td>Tensorflow</td>
+		  </tr>
+		  <tr>
+			<th>Entornos de Desarrollo</th>
+			<td>Pycharm</td>
+			<td>IntelIIJ</td>
+			<td>Visual Studio</td>
+			<td>Eclipse</td>
+			<td>Android Studio</td>
+		  </tr>
+		  <tr>
+			<th>Bases de Datos</th>
+			<td>SQL</td>
+			<td>MySQL Workbench</td>
+		  </tr>
+		  <tr>
+			<th>Lenguajes de Marcas</th>
+			<td>HTML-CSS</td>
+			<td>XAML</td>
+			<td>XML</td>
+			<td>XSLT</td>
+			<td>Xpath</td>
+			<td>Xquery</td>
+		  </tr>
+		  <tr>
+			<th>Sistemas Operativos</th>
+			<td>Windows 10</td>
+			<td>Ubuntu</td>
+			<td>Android</td>
+		  </tr>
+		  <tr>
+			<th>Bioinformática</th>
+			<td>Bases de datos</td>
+			<td>Genome Browser</td>
+			<td>Blast</td>
+			<td>Mega</td>
+			<td>Galaxy</td>
+		  </tr>
+		  <tr>
+			<th>Ofimática</th>
+			<td>Excel</td>
+			<td>Word</td>
+			<td>PowerPoint</td>
+			<td>Power BI</td>
+			<td>Photoshop</td>
+		  </tr>
+		</table>
+  
+  <!-- Añadir más categorías de la misma manera -->
+	</section>
+	
+    <section>
+		<h2>Formación</h2>
         <!-- Repite para otros proyectos -->
     </section>
     <!-- Agrega más secciones según sea necesario -->
