Se añade seccion formacion

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	</section>
 	
 	<section>
+		<br>
+		<br>
 		<h2>Tecnologias</h2>	
 
 		<table>
@@ -107,10 +109,68 @@
 	</section>
 	
     <section>
+		<br>
 		<h2>Formación</h2>
-        <!-- Repite para otros proyectos -->
+		<br>
+		<div class="formation-section">
+			
+			<div class="container-formacion">
+				<div class="columna-formacion">
+					<img src="images/Logo-ilerna.png" alt="Logo Ilerna" width="110">
+				</div>
+				<div class="columna-formacion">
+					<div class="formation-item">
+						<h2>Desarrollo de Aplicaciones Multiplataforma</h2>
+						<p class="institution">Ilerna</p>
+						<p class="dates">2023 – Actual</p>
+					</div>
+				</div>
+			</div>
+			<div class="container-formacion">
+				<div class="columna-formacion">
+					<img src="images/logo-google.png" alt="Logo Google" width="110">
+				</div>
+				<div class="columna-formacion">
+					<div class="formation-item">
+						<h2>Google IT Support Profesional Certificate</h2>
+						<p class="institution">Google, Coursera</p>
+						<p class="dates">2022 – 2023</p>
+					</div>
+				</div>
+			</div>
+			<div class="container-formacion">
+				<div class="columna-formacion">
+					<img src="images/logo-UB.png" alt="Logo UB" width="110">
+				</div>
+				<div class="columna-formacion">
+					<div class="formation-item">
+						<h2>Máster en Genética y Genómica</h2>
+						<p class="institution">Universidad de Barcelona</p>
+						<p class="dates">2019 – 2020</p>
+					</div>
+				</div>
+			</div>
+			<div class="container-formacion">
+				<div class="columna-formacion">
+					<img src="images/logo-ule.jpg" alt="Logo ULE" width="110">
+				</div>
+				<div class="columna-formacion">
+					<div class="formation-item">
+						<h2>Grado en Biotecnología (Erasmus+)</h2>
+						<p class="institution">Universidad de León</p>
+						<p class="dates">2015 – 2019</p>
+					</div>
+				</div>
+			</div>
+	
+		</div>
     </section>
-    <!-- Agrega más secciones según sea necesario -->
+	
+	<section id="sobre-mi">
+        <h2>Background bioinformática</h2>
+		
+    </section>
+    
     <footer>
 		<div class="social-links">
 			<a href="https://www.linkedin.com/in/sergiomeleroroyo/" target="_blank">
