Se termina esquema inicial

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
-        <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>	
+        <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>	
 	</section>
 	
 	
@@ -42,7 +42,7 @@
 	<section>
 		<br>
 		<br>
-		<h2>Tecnologias</h2>	
+		<h2>Tecnologias/Conocimientos</h2>	
 
 		<table>
 		  <tr>
@@ -53,11 +53,6 @@
 			<td>C++</td>
 			<td>Perl</td>
 			<td>JavaScript</td>
-		  </tr>
-		  <tr>
-			<th>Frameworks</th>
-			<td>WPF</td>
-			<td>Tensorflow</td>
 		  </tr>
 		  <tr>
 			<th>Entornos de Desarrollo</th>
@@ -72,6 +67,17 @@
 			<td>SQL</td>
 			<td>MySQL Workbench</td>
 		  </tr>
+		  <tr>
+			<th>Control de versiones</th>
+			<td>Git</td>
+			<td>Github</td>
+		  </tr>
+		  <tr>
+			<th>Frameworks</th>
+			<td>WPF</td>
+			<td>Tensorflow</td>
+		  </tr>
+		  
 		  <tr>
 			<th>Lenguajes de Marcas</th>
 			<td>HTML-CSS</td>
@@ -100,8 +106,16 @@
 			<td>Excel</td>
 			<td>Word</td>
 			<td>PowerPoint</td>
-			<td>Power BI</td>
+			<td>PowerBI</td>
 			<td>Photoshop</td>
+		  </tr>
+		  <tr>
+			<th>Idiomas</th>
+			<td>Español</td>
+			<td>Inglés</td>
+			<td>Francés</td>
+			<td></td>
+			
 		  </tr>
 		</table>
   
@@ -166,10 +180,31 @@
 		</div>
     </section>
 	
-	<section id="sobre-mi">
-        <h2>Background bioinformática</h2>
-		
+	<section>
+        <h2>Mis intereses</h2>
+		<div class="container">
+			<div class="columna-intereses">
+				<h3>Back-end</h3>
+				<img src="images/back-end.png" alt="Back end" width="300">
+			</div>
+			<div class="columna-intereses">
+				<h3>Desarrollo de aplicaciones móviles y de escritorio</h3>
+				<img src="images/escritorio.png" alt="App" width="300">
+			</div>
+			<div class="columna-intereses">
+				<h3>Aplicaciones a las ciencias de la salud</h3>
+				<img src="images/GWAS.png" alt="GWAS" width="300">
+			</div>
+		</div>
     </section>
+	
+	<section>
+        <h2>Como trabajador</h2>
+		<p>Soy una persona pragmática y orientada a resultados</p>
+		<p>Tengo un fuerte sentido de la responsabilidad y autoexigencia</p>
+		<p>Valoro el trabajo en equipo y formar parte de una comunidad</p>
+		<p>Busco la satisfacción de ayudar en todo lo que pueda</p>
+	</section>
     
     <footer>
 		<div class="social-links">
