cambios en portatil

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 
+	<!-- Encabezado -->
     <header>
         <h1>Sergio Melero Royo</h1>
         <p>Desarrollador de Software</p>
     </header> 
 	
-    <section id="sobre-mi">
+	<!-- 1. Sobre mi -->
+    <section>
         <h2>Sobre Mí</h2>
         <p>Durante mis estudios en biotecnología siempre me llamo la atención que disfrutaba las oportunidades para programar como nadie a mi alrededor. Tras pasar 4 años ejerciendo como técnico de laboratorio, he decidido dar un salto de fe en busca de una carrera profesional que me de la oportunidad de resolver problemas complejos, que es lo que me llena como persona.</p>	
 	</section>
 	
-	
+	<!-- 2. Qué estoy haciendo ahora -->
 	<section>
 		<h2>¿Qué estoy haciendo ahora?</h2>
 		<div class="container">
 			<div class="column">
 				<h3>Pokemon silver online</h3>
-				<div class="gif-container">
-					<img src="images/gifs/Pokemon_silver_online.gif" alt="Pokemon silver">
-				</div>
+				<img src="images/gifs/Pokemon_silver_online.gif" alt="Pokemon silver">		
 			</div>
 			<div class="column">
 				<h3>El tetris</h3>
@@ -39,6 +39,7 @@
 		</div>
 	</section>
 	
+	<!-- 3. Tecnologías/Conocimientos -->
 	<section>
 		<br>
 		<br>
@@ -118,10 +119,9 @@
 			
 		  </tr>
 		</table>
-  
-  <!-- Añadir más categorías de la misma manera -->
 	</section>
 	
+	<!-- 4. Formación -->
     <section>
 		<br>
 		<h2>Formación</h2>
@@ -179,7 +179,8 @@
 	
 		</div>
     </section>
-	
+
+	<!-- 5. Mis intereses -->
 	<section>
         <h2>Mis intereses</h2>
 		<div class="container">
@@ -198,6 +199,7 @@
 		</div>
     </section>
 	
+	<!-- 6. Actitudes -->
 	<section>
         <h2>Como trabajador</h2>
 		<p>Soy una persona pragmática y orientada a resultados</p>
@@ -206,6 +208,7 @@
 		<p>Busco la satisfacción de ayudar en todo lo que pueda</p>
 	</section>
     
+	<!-- Footer -->
     <footer>
 		<div class="social-links">
 			<a href="https://www.linkedin.com/in/sergiomeleroroyo/" target="_blank">
