--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<td>Java</td>
 					<td>C#</td>
 					<td>C++</td>
-					<td>Perl</td>
+					<td><p onmouseover="display_conocimientos('Perl')">Perl</p></td>
 					<td>JavaScript</td>
 				  </tr>
 				  <tr>
