Se añade cursor

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 				<table>
 				  <tr>
 					<th>Lenguajes de Programación</th>
-					<td><p onmouseover="display_conocimientos('Python')">Python</p></td>
+					<td><p onclick="display_conocimientos('Python')">Python</p></td>
 					<td>Java</td>
 					<td>C#</td>
 					<td>C++</td>
-					<td><p onmouseover="display_conocimientos('Perl')">Perl</p></td>
+					<td><p onclick="display_conocimientos('Perl')">Perl</p></td>
 					<td>JavaScript</td>
 				  </tr>
 				  <tr>
