Se añade estilos a la zona variable

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <h2>Como trabajador</h2>
 		<div class="container-foto">
 			<div class="columna-formacion">
-				<ul>
+				<ul class="Actitudes">
 					<li>Soy una persona pragmática y orientada a resultados</li>
 					<li>Tengo un fuerte sentido de la responsabilidad</li>
 					<li>Valoro el trabajo en equipo y formar parte de una comunidad</li>
